--- a/poc/clickPage.html
+++ b/poc/clickPage.html
@@ -24,7 +24,8 @@
         console.log(2)
         // récuperer les elements souhaités et faire les actions voulus
         iframe.contentWindow.document.getElementsByName(clickOnName)[0].click()
-        console.log(3)
+
+        console.log(iframe.contentWindow.document?.getElementsByName(clickOnName)[0] + 'clicked' )
     }, 15000);
 
 
