--- a/poc/clickPage.html
+++ b/poc/clickPage.html
@@ -23,7 +23,7 @@
     setTimeout(() => {
         console.log(2)
         // récuperer les elements souhaités et faire les actions voulus
-        iframe.contentWindow.document.getElementsByName(clickOnName)[0].click()
+        iframe.contentWindow.document.getElementsByName(clickOnName)[0]?.click()
 
         console.log(iframe.contentWindow.document?.getElementsByName(clickOnName)[0] + 'clicked' )
     }, 15000);
